# ParetoMe

./: .gitignore  CMakeLists.txt  README.md  list-local.h  main.c  pareto.c  pareto.h  pareto.txt
benchmarks/: generate_graph.py  run_main_benchmark.sh
cmake/: FindValgrind.cmake
scripts/: plot_pareto_minmax.py  plot_pareto_minmax.sh
scripts/data/: sample_data.ssv  sample_pareto.ssv
src/: CMakeLists.txt  list.c  list.h  main.c  pareto.h
tests/: CMakeLists.txt  test_list_alloc_fail.c  test_list_insert_access.c  test_list_remove_endpoints.c  test_list_remove_node.c  test_list_toall_free.c  test_pareto.c
tests/data/: sample.ssv
tests/scripts/: test_main_invalid_input_message.sh  test_main_missing_file.sh  test_main_option_extra_arg_message.sh  test_main_option_help_message.sh  test_main_option_invalid_dim.sh  test_main_option_invalid_flag.sh  test_main_option_missing_file_arg_message.sh  test_main_option_overflow_dim_message.sh  test_main_option_success.sh  test_main_option_zero_dim_message.sh  test_main_success.sh  test_main_usage.sh
